<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/nav_overview" />
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_local_offer_black_24dp"
            android:title="@string/nav_expenses" />
        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/nav_income" />
        <item
            android:id="@+id/nav_savings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_savings" />
        <item
            android:id="@+id/nav_lists"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/nav_lists" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />

            <item
                android:id="@+id/nav_help_and_feedback"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="Help &amp; Feedback" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="Settings" />
        </menu>
    </item>

</menu>
